[package]
name = "flow-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]

# async runtime
async-trait = "0.1.89"
tokio = { version = "1.48", features = ["full"] }

# error processor
thiserror = "2.0.17"

# http client & serialization
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"