[package]
name = "flow-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]

# signing
k256 = "0.13.4"
sha2 = "0.10.9"
sha3 = "0.10.8"
bs58 = "0.5.1"
hex = "0.4.3"

bip39 = "2.2.0"
bip32 = "0.5.3"
rand = "0.9.2"

# async runtime
async-trait = "0.1.89"
tokio = { version = "1.48", features = ["full"] }

# error processor
thiserror = "2.0.17"

# http client & serialization
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_family = "unix")'.dependencies]
# system calls
libc = "0.2"
